# advent-of-code

./: .gitignore
2022/: config.h.in  meson.build
2022/src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp
